# dropEst

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  README.md  README.rst  compile.sh  config.hifi.xml  config.xml  config_desc.xml  dropReport.Rsc  dropest.cpp  droptag.cpp  edit_distance.h  filter_bam.cpp  indrop.r  indrop2R.rsc  indropPlots.rsc  indrop_results.h  indropalign.sh  indropest.cpp  indroptag.cpp
CMake/: FindBam.cmake  FindBamTools.cmake  FindR.cmake  deps.cmake
Estimation/: BamProcessor.cpp  BamProcessor.h  Cell.cpp  Cell.h  CellsDataContainer.cpp  CellsDataContainer.h  Estimator.cpp  Estimator.h  FilledBamProcessor.cpp  FilledBamProcessor.h  Gene.cpp  Gene.h  GenesContainer.cpp  GenesContainer.h  IndropResults.cpp  IndropResults.h  ReadInfo.h  ReadMapBamProcessor.cpp  ReadMapBamProcessor.h  ReadParametersEfficient.cpp  ReadParametersEfficient.h  ResultPrinter.cpp  ResultPrinter.h  ResultsPrinter.cpp  ResultsPrinter.h  Stats.cpp  Stats.h  StringIndexer.cpp  StringIndexer.h  UMI.cpp  UMI.h
Estimation/BamProcessing/: BamController.cpp  BamController.h  BamProcessor.cpp  BamProcessor.h  BamProcessorAbstract.cpp  BamProcessorAbstract.h  BamProcessorFactory.cpp  BamProcessorFactory.h  BamTags.cpp  BamTags.h  FilledBamParamsParser.cpp  FilledBamParamsParser.h  FilledBamProcessor.cpp  FilledBamProcessor.h  FilteringBamProcessor.cpp  FilteringBamProcessor.h  ReadMapBamProcessor.cpp  ReadMapBamProcessor.h  ReadMapParamsParser.cpp  ReadMapParamsParser.h  ReadParamsParser.cpp  ReadParamsParser.h  ReadsParamsParser.cpp  ReadsParamsParser.h
Estimation/Merge/: AbstractMergeStrategy.cpp  AbstractMergeStrategy.h  BaseMergeStrategy.cpp  BaseMergeStrategy.h  BrokenRealBarcodesMergeStrategy.cpp  (+23 more)
TagsSearch/: ConcurrentGzWriter.cpp  ConcurrentGzWriter.h  FastQReader.cpp  FastQReader.h  FilesProcessor.cpp  FilesProcessor.h  FixPosSpacerTagsFinder.cpp  FixPosSpacerTagsFinder.h  IClipTagsFinder.cpp  IClipTagsFinder.h  IndropV1TagsFinder.cpp  IndropV1TagsFinder.h  IndropV3LibsTagsFinder.cpp  IndropV3LibsTagsFinder.h  IndropV3TagsFinder.cpp  IndropV3TagsFinder.h  MultipleBarcodesTagsFinder.cpp  MultipleBarcodesTagsFinder.h  SingleBarcodeTagsFinder.cpp  SingleBarcodeTagsFinder.h  SpacerFinder.cpp  SpacerFinder.h  SpacerTagsFinder.cpp  SpacerTagsFinder.h  SplitSeqTagsFinder.cpp  SplitSeqTagsFinder.h  TagsFinder.cpp  TagsFinder.h  TagsFinderAbstract.h  TagsFinderBase.cpp  TagsFinderBase.h  TextWriter.cpp  TextWriter.h  TwoBarcodesTagsFinder.cpp  TwoBarcodesTagsFinder.h
Tests/: TestEstimation.cpp  TestEstimationMergeProbs.cpp  TestEstimator.cpp  TestTagsSearch.cpp  TestTools.cpp
Tools/: BlockingConcurrentQueue.h  CollisionsAdjuster.cpp  CollisionsAdjuster.h  ConcurrentQueue.h  GeneInfo.cpp  GeneInfo.h  GtfRecord.cpp  GtfRecord.h  IndexedValue.h  Interval.cpp  Interval.h  IntervalsContainer.h  LineProvider.cpp  LineProvider.h  Logs.cpp  Logs.h  OmpConcurrentQueue.cpp  OmpConcurrentQueue.h  ReadParameters.cpp  ReadParameters.h  ReadsParameters.cpp  ReadsParameters.h  RefGenesContainer.cpp  RefGenesContainer.h  RefGenesContainerWithIntons.h  RefGenesContainerWithIntrons.cpp  ScSpConcurrentQueue.h  UtilFunctions.cpp  UtilFunctions.h  edit_distance.h  log_defs.h  log_init.h
configs/: 10x.xml  cel_seq2.xml  config_desc.xml  drop_seq.xml  drop_seq_velocyto.xml  iclip.xml  indrop_v1_2.xml  indrop_v3.xml  seq_well.xml  split_seq.xml
data/: SRR1784310_curve.rds  barcodes_11_16.indrop  genesets_human.rds  genesets_mouse.rds  gtf_test.gtf  mit_genes_human.rds
docs/: alignment.rst  conf.py  configuration.rst  development.rst  dropest.rst  dropestr.rst  dropreport.rst  droptag.rst  index.rst  requirements.txt  setup.rst
dropestr/: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE
dropestr/R/: RcppExports.R  cell_number.R  data.R  kde_classifier.R  low_quality_cells.R  quality_control.R  umi_classifier.R  umi_correction.R  utils.R
dropestr/data/: reads_per_umi_per_cell.rda  saturation_srr1784312.rda
dropestr/inst/include/: ClassifierData.h  CppMap.h  dropestr.h  umi_processing.h
dropestr/man/: AdjustGeneExpression.Rd  ArrayDerivative.Rd  Center.Rd  EstimateCellsNumber.Rd  EstimateSaturation.Rd  FillAdjacentUmisData.Rd  FractionSmoothScatter.Rd  GetLongestTrue.Rd  GetOptimalPcs.Rd  GetUmisDistribution.Rd  GetUmisDistributionNew.Rd  GetUmisDistributionOld.Rd  Normalize.Rd  ParseUmisPerGene.Rd  PlotCellScores.Rd  PlotCellsNumberHist.Rd  PlotCellsNumberLine.Rd  PlotCellsNumberSummary.Rd  PlotGenesPerCell.Rd  PlotIntergenicFractionByChromosomes.Rd  PlotReadsPerUmiByCells.Rd  PlotSaturationEstimates.Rd  PlotUmisDistribution.Rd  PredictKDE.Rd  PrepareCellsNumberPlot.Rd  PrepareLqCellsData.Rd  Scale.Rd  ScoreCells.Rd  ScorePipelineCells.Rd  TrainKDE.Rd  lq_cells_info.Rd  reads_per_umi_per_cb.Rd  reads_per_umi_per_cell.Rd  saturation_srr1784312.Rd
dropestr/paper/: AnnotationSCG71.Rmd  CorrelationsComparisonBMMC1.Rmd  CorrelationsComparisonBMMC1.html  FormulasDerivation.Rmd  LowQualityCellsValidation.Rmd  LowQualityCellsValidationPbmc8k.Rmd  LowQualityCellsValidationSCG71.Rmd  LowQualityCellsValidationSRR3.Rmd  ReadsPerUmiApproximation.Rmd  TrimAml035Post.Rmd  TrimAml035PostDerivation.Rmd  TrimmedCollisions.Rmd  TrimmedUMIsDemonstration.Rmd  TrimmedUMIsDemonstration.nb.html  VariationsComparisonBMMC1.Rmd
dropestr/paper/Functions/: Functions.R  PagodaWrappers.R  PlotFuncs.R  VariationAnalysisFuncs.R
dropestr/paper/Functions/cpp/: Classification.hpp  CollisionsAdjustment.hpp  CommonFuncs.hpp  Functions.cpp  NeighboursEstimation.hpp  OtherFuncs.hpp
dropestr/src/: ClassifierData.cpp  CppMap.cpp  Makevars  RcppExports.cpp  RcppWrappers.cpp  adjacent_umis_estimation.cpp  classification.cpp  collisions_adjustment.cpp  rcpp_wrappers.cpp  utils.cpp
dropestr/vignettes/: low-quality-cells.Rmd  umi-correction.Rmd
examples/: EXAMPLES.md
scripts/: analyze_mit.r  analyze_preseqr.r  dropalign.sh  filter_pred_out.pl  get_genesets.r  get_pred_stat.r  report.Rmd  run_all_data.py  run_preseq_an.pl  split_gz.sh  trim_bed_names.py  trim_intron_bed_names.py
utils/: filter_mixture_bam.cpp
(+53 files in other folders)
